# Backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/app/: app.py
src/app/api/: router.py
src/app/api/extensions/: auth.py  tokens.py  validate.py
src/app/api/models/: __init__.py  complaints.py  places.py  reviews.py  users.py
src/app/api/routes/: auth.py  moderate.py  places.py  reviews.py  tokens.py  user.py
src/app/config/: config.py
src/app/email/: __init__.py  email.py
src/app/email/templates/: update_password.html
src/app/extensions/: __init__.py  get_bytes.py  photo_resize.py
src/app/middlewares/: AuthMiddleware.py  BlockMiddleware.py  ModeratorAuthMiddleware.py  __init__.py
src/app/templates/: update_password.html  verification_code.html
src/database/: database.py
src/database/controllers/: BaseController.py  Complaints.py  Places.py  Reviews.py  Users.py  __init__.py
src/database/models/: Complaints.py  Places.py  Reviews.py  Users.py  __init__.py
src/database/tests/: tests.py
