[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend server for sportacus web-app"
authors = ["Evgeniy Smirnov <59017716+mrlimax1@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
email-validator = "^2.1.1"
beanie = "^1.25.0"
bcrypt = "^4.1.2"
python-decouple = "^3.8"
pydantic = "^2.6.4"
typing-extensions = "^4.10.0"
Jinja2 = "^3.1.3"
aiosmtplib = "^3.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
start = "src.main:start"

[tool.poetry.dev-dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
